--- a/templates/home.html
+++ b/templates/home.html
@@ -27,7 +27,7 @@
     <div id="decline" class="btn btn-default btn-danger submit col-md-6" data-toggle="modal" data-target="#declineModal">No Thanks</div>
   </div>
  </form>
-
+  {% if twitter %}<a href="/twitter" class="btn btn-default submit col-md-12">Take a selfie for Twitter</a>{% endif %}
 <!-- Modal -->
 <div class="modal fade" id="declineModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
