--- a/templates/login.html
+++ b/templates/login.html
@@ -23,7 +23,7 @@
             <tr><td></td><td onclick="pwd(0)">0</td><td></td></tr>
         </table>
 
-        <button class="btn btn-default submit col-md-12" type="submit">Login</button>
+        <button class="btn btn-default submit col-md-12 col-sm-12" type="submit">Login</button>
     </form>
 </div>
 {% endblock %}
