--- a/templates/delivery.html
+++ b/templates/delivery.html
@@ -8,8 +8,8 @@
 {% block content %}
 <div class="row">
 <span id="orderId" hidden>{{ order['timestamp'] }}</span>
-<div class="btn btn-default submit col-md-12 complete">Order Again</div>
-<div id="decline" class="btn btn-default submit col-md-12 complete" data-toggle="modal" data-target="#declineModal">No Thanks</div>
+<div class="btn btn-default submit col-md-12 col-sm-12 complete">Order Again</div>
+<div id="decline" class="btn btn-default submit col-md-12 col-sm-12 complete" data-toggle="modal" data-target="#declineModal">No Thanks</div>
 </div>
 
 <!-- Modal -->
