--- a/templates/order.html
+++ b/templates/order.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <div class="row">
-<div class="btn btn-default submit col-md-12" data-toggle="modal" data-target="#orderModal">View order</div>
+<div class="btn btn-default submit col-md-12 col-sm-12" data-toggle="modal" data-target="#orderModal">View order</div>
 </div>
 
 <!-- Modal -->
@@ -20,7 +20,7 @@
       </div>
       <div class="modal-body">
           {% for name, quantity in order['items'].items() %}
-          <div class="col-md-4">
+          <div class="col-md-4 col-sm-4">
               <h3>{{ name }}</h3>
               <h2 class="order_value">{{ quantity }}</h2>
           </div>
@@ -28,14 +28,15 @@
           {% if session['logged_in'] %}
           <p>Order placed at <strong>{{ order['timestamp'] }}</strong></p>
 
-              <a href="/deliver/{{ order['timestamp'] }}" class="btn btn-default btn-success submit col-md-6">Deliver</a>
+              <a href="/deliver/{{ order['timestamp'] }}" class="btn btn-default btn-success submit col-md-6 col-sm-6">Deliver</a>
               <form action="/cancel_order" method="POST">
               <input name="orderId" type="text" value="{{ order['timestamp'] }}" hidden>
-              <button type="submit" class="btn btn-default btn-danger submit col-md-6">Cancel Order</a>
+              <button type="submit" class="btn btn-default btn-danger submit col-md-6 col-sm-6">Cancel Order</a>
               </form>
 
           {% endif %}
       </div>
+      <hr class="featurette-divider">
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
       </div>
