--- a/templates/twitter.html
+++ b/templates/twitter.html
@@ -1,3 +1,5 @@
+{% extends "base.html" %}
+
 {% block header %}
 <h1>LUCIE's selfie service</h1>
 <p class="lead">Follow LUCIE on Twitter @LucieStrands. Smile and
@@ -5,7 +7,7 @@
 {% endblock %}
 
 {% block content %}
-<a href="/" class="btn btn-default submit col-md-12">Back to the Menu</a>
+<a href="/" class="btn btn-default submit col-md-12 col-sm-12">Back to the Menu</a>
 <a class="twitter-timeline" href="https://twitter.com/LucieStrands">Tweets by @LucieStrands</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-<a href="/" class="btn btn-default submit col-md-12">Back to the Menu</a>
+<a href="/" class="btn btn-default submit col-md-12 col-sm-12">Back to the Menu</a>
 {% endblock %}
