--- a/templates/home.html
+++ b/templates/home.html
@@ -43,7 +43,7 @@
         <h4 class="modal-title" id="myModalLabel">No Thanks</h4>
       </div>
       <div class="modal-body">
-        "Ok, I'll head back to the Kitchen. Call me if you need anything."
+        "Ok, I'll be off, call me if you need anything."
       </div>
       <div class="modal-footer">
         <button id="dismiss" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
