--- a/templates/delivery.html
+++ b/templates/delivery.html
@@ -1,14 +1,26 @@
 {% extends "base.html" %}
 
 {% block header %}
-<h1>Delivery for {{ order['location']}} </h1>
+<h1>Delivery for {{ order['location'] }} </h1>
 <p class="lead">Can I get you anything else?.</p>
 {% endblock %}
 
 {% block content %}
 <div class="row">
+    {% for name, quantity in order['items'].items() %}
+    <div class="col-md-4 col-sm-4">
+        <h3>{{ name }}</h3>
+        <h2 class="order_value">{{ quantity }}</h2>
+    </div>
+    {% endfor %}
+</div>
+<hr class="featurette-divider">
+<div class="row">
 <span id="orderId" hidden>{{ order['timestamp'] }}</span>
 <div class="btn btn-default submit col-md-12 col-sm-12 complete">Order Again</div>
+</div>
+<hr class="featurette-divider">
+<div class="row">
 <div id="decline" class="btn btn-default submit col-md-12 col-sm-12 complete" data-toggle="modal" data-target="#declineModal">No Thanks</div>
 </div>
 
@@ -21,7 +33,7 @@
         <h4 class="modal-title" id="myModalLabel">No Thanks</h4>
       </div>
       <div class="modal-body">
-        "Ok, I'll head back to the Kitchen. Call me if you need anything."
+        "Ok, I'll be off, call me if you need anything."
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
