--- a/templates/order.html
+++ b/templates/order.html
@@ -45,3 +45,14 @@
 </div>
 
 {% endblock %}
+
+{% block scripts %}
+{{ super() }}
+<script>
+$(document).ready(function(){
+    namespace = '/io';
+    var socket = io.connect(location.protocol + '//' + document.domain + ':' + location.port + namespace);
+    socket.emit('return_to_hub');
+});
+</script>
+{% endblock %}
