--- a/templates/base.html
+++ b/templates/base.html
@@ -26,17 +26,16 @@
         <a href="/" type="button" class="btn btn-default">Menu</a>
       </div>
       <div class="btn-group btn-group-lg" role="group">
-        <a href="/order" type="button" class="btn btn-default">Current Order</a>
+        <a href="/all_orders" type="button" class="btn btn-default">Orders</a>
       </div>
       <div class="btn-group btn-group-lg" role="group">
-        <a href="/all_orders" type="button" class="btn btn-default">All Orders</a>
-      </div>
-      <div class="btn-group btn-group-lg" role="group">
-        <a href="/navigation" type="button" class="btn btn-default">Go To</a>
+        <a href="/navigation" type="button" class="btn btn-default">Navigation</a>
       </div>
     </div>
     {% endif %}
     <div class="container">
+        <h2>Receive:</h2>
+        <div id="log"></div>
       <div class="page-header">
           {% block header %}
           {% endblock %}
@@ -44,10 +43,13 @@
       {% block content %}
       {% endblock %}
     </div>
+    {% block scripts %}
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/my_scripts.js') }}"></script>
+    {% endblock %}
   </body>
 </html>
