--- a/templates/delivery.html
+++ b/templates/delivery.html
@@ -15,31 +15,60 @@
     {% endfor %}
 </div>
 <hr class="featurette-divider">
-<div class="row">
-<span id="orderId" hidden>{{ order['timestamp'] }}</span>
-<div class="btn btn-default submit col-md-12 col-sm-12 complete">Order Again</div>
-</div>
-<hr class="featurette-divider">
-<div class="row">
-<div id="decline" class="btn btn-default submit col-md-12 col-sm-12 complete" data-toggle="modal" data-target="#declineModal">No Thanks</div>
-</div>
-
-<!-- Modal -->
-<div class="modal fade" id="declineModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">No Thanks</h4>
-      </div>
-      <div class="modal-body">
-        "Ok, I'll be off, call me if you need anything."
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>
-    </div>
+  <div class="row">
+    <form action="/order_complete" method="POST">
+      <input id="orderId" name="orderId" value="{{ order['timestamp'] }}" type="text"  hidden/>
+      <button type="submit" class="btn btn-default submit col-md-12 col-sm-12 complete">Order Again</button>
+    </form>
   </div>
-</div>
+  <hr class="featurette-divider">
+  <div class="row">
+      <div id="decline" class="btn btn-default submit col-md-12 col-sm-12 complete">No Thanks</div>
+  </div>
 
+ <!-- Modal -->
+ <div class="modal fade" id="declineModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+   <div class="modal-dialog" role="document">
+     <div class="modal-content">
+       <div class="modal-header">
+         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+         <h4 class="modal-title" id="myModalLabel">No Thanks</h4>
+       </div>
+       <div class="modal-body">
+         "Ok, I'll be off, call me if you need anything."
+       </div>
+       <div class="modal-footer">
+         <button id="dismiss" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+       </div>
+     </div>
+   </div>
+ </div>
+{% endblock %}
+
+{% block scripts %}
+{{ super() }}
+<script>
+$(document).ready(function(){
+    namespace = '/io';
+    var socket = io.connect(location.protocol + '//' + document.domain + ':' + location.port + namespace);
+    socket.emit('go_to', {destination: "{{ order['location'] }}"});
+    $('#decline').click(function(event){
+        socket.emit('choose_destination');
+        $("#declineModal").modal("show");
+        var payload =  {orderId: "{{ order['timestamp'] }}"}
+        $.ajax({type: 'POST', url: "/order_complete",
+                data: payload, success: function(result){
+            window.setTimeout(function(){
+                $(location).attr('href',"/");
+             }, 5000);
+        }});
+        // Time out Modal that pops up, it'll hide.
+        hiding = window.setTimeout(function () {
+            $("#declineModal").modal("hide");
+        }, 5000);
+        return false;
+     });
+});
+
+</script>
 {% endblock %}
