--- a/templates/home.html
+++ b/templates/home.html
@@ -25,7 +25,7 @@
     </div>
     {% endfor %}
     <button id="order" type="submit" class="btn btn-default btn-success submit col-md-6 col-sm-6">Order</button>
-    <div id="decline" class="btn btn-default btn-danger submit col-md-6 col-sm-6" data-toggle="modal" data-target="#declineModal">No Thanks</div>
+    <div id="decline" class="btn btn-default btn-danger submit col-md-6 col-sm-6">No Thanks</div>
 
  </form>
  </div>
@@ -52,14 +52,55 @@
   </div>
 </div>
 
+{% endblock %}
 
+{% block scripts %}
+{{ super() }}
 <script>
-// Vanilla JavaScript (JQuery not yet loaded)
-// Ensure values match because cache
-document.addEventListener("DOMContentLoaded", function(event) {
-{% for item in menu -%}
-  document.getElementById("s {{item['name'] }}").innerHTML = document.getElementById("f {{item['name'] }}").value
- {% endfor %}
+$(document).ready(function() {
+    {% for item in menu -%}
+      $("#s {{item['name'] }}").html($("#f {{item['name'] }}").val());
+     {% endfor %}
+    // Use a "/test" namespace.
+    // An application can open a connection on multiple namespaces, and
+    // Socket.IO will multiplex all those connections on a single
+    // physical channel. If you don't care about multiple channels, you
+    // can set the namespace to an empty string.
+    namespace = '/io';
+
+    // Connect to the Socket.IO server.
+    // The connection URL has the following format:
+    //     http[s]://<domain>:<port>[/<namespace>]
+    var socket = io.connect(location.protocol + '//' + document.domain + ':' + location.port + namespace);
+
+    // Event handler for new connections.
+    // The callback function is invoked when a connection with the
+    // server is established.
+    socket.on('connect', function() {
+        socket.emit('my_event', {data: 'I\'m connected!'});
+    });
+
+    // Event handler for server sent data.
+    // The callback function is invoked whenever the server emits data
+    // to the client. The data is then displayed in the "Received"
+    // section of the page.
+    socket.on('my_response', function(msg) {
+        $('#log').append('<br>' + $('<div/>').text('Received #' + msg + ': ' + msg.data).html());
+    });
+
+    // Handlers for the different forms in the page.
+    // These accept data from the user and send it to the server in a
+    // variety of ways
+    $('#decline').click(function(event){
+        socket.emit('return_to_hub');
+        $("#declineModal").modal("show");
+        // Time out Modal that pops up, it'll hide.
+        hiding = window.setTimeout(function () {
+            $("#declineModal").modal("hide");
+            $(location).attr('href',"/");
+        }, 5000);
+        return false;
+    });
 });
 </script>
 {% endblock %}
