--- a/templates/home.html
+++ b/templates/home.html
@@ -71,7 +71,7 @@ $(document).ready(function() {
     // Connect to the Socket.IO server.
     // The connection URL has the following format:
     //     http[s]://<domain>:<port>[/<namespace>]
-    var socket = io.connect(location.protocol + '//' + document.domain + ':' + location.port + namespace);
+    socket = io.connect(location.protocol + '//' + document.domain + ':' + location.port + namespace);
 
     // Event handler for new connections.
     // The callback function is invoked when a connection with the
@@ -84,9 +84,7 @@ $(document).ready(function() {
     // The callback function is invoked whenever the server emits data
     // to the client. The data is then displayed in the "Received"
     // section of the page.
-    socket.on('my_response', function(msg) {
-        $('#log').append('<br>' + $('<div/>').text('Received #' + msg + ': ' + msg.data).html());
-    });
+    socket.on('helper', function(msg){display_helper(msg)});
 
     // Handlers for the different forms in the page.
     // These accept data from the user and send it to the server in a
