WebSockets for the win

--- a/templates/base.html
+++ b/templates/base.html
@@ -51,8 +51,8 @@
           </div>
           <div class="modal-body" id="help_text">
           </div>
-          <div id="help_button" class="modal-footer">
-
+          <div id="help_container" class="modal-footer">
+              <button id="help_button" type="button" class="btn btn-default" data-dismiss="modal"></button>
           </div>
         </div>
       </div>
