--- a/templates/all_orders.html
+++ b/templates/all_orders.html
@@ -22,3 +22,8 @@
 <p>No orders have been placed yet for this session.</p>
 {% endif %}
 {% endblock %}
+
+{% block scripts %}
+{{ super() }}
+
+{% endblock %}
