--- a/templates/home.html
+++ b/templates/home.html
@@ -55,45 +55,25 @@
 {% endblock %}
 
 {% block scripts %}
-{{ super() }}
 <script>
 $(document).ready(function() {
+    // Ensure displayed numbers in menu form are the same as input values.
     {% for item in menu -%}
       $("#s {{item['name'] }}").html($("#f {{item['name'] }}").val());
      {% endfor %}
-    // Use a "/test" namespace.
-    // An application can open a connection on multiple namespaces, and
-    // Socket.IO will multiplex all those connections on a single
-    // physical channel. If you don't care about multiple channels, you
-    // can set the namespace to an empty string.
+    // Open Websocket
     namespace = '/io';
-
-    // Connect to the Socket.IO server.
-    // The connection URL has the following format:
-    //     http[s]://<domain>:<port>[/<namespace>]
     socket = io.connect(location.protocol + '//' + document.domain + ':' + location.port + namespace);
 
-    // Event handler for new connections.
-    // The callback function is invoked when a connection with the
-    // server is established.
-    socket.on('connect', function() {
-        socket.emit('my_event', {data: 'I\'m connected!'});
-    });
-
-    // Event handler for server sent data.
-    // The callback function is invoked whenever the server emits data
-    // to the client. The data is then displayed in the "Received"
-    // section of the page.
+    // Monitored Navigation Helper: Call display function. When button clicked, inform serverside
     socket.on('helper', function(msg){display_helper(msg)});
     $('#help_button').click(function(event){socket.emit('helped')})
 
-    // Handlers for the different forms in the page.
-    // These accept data from the user and send it to the server in a
-    // variety of ways
+    // When button id=decline is clicked:
     $('#decline').click(function(event){
-        socket.emit('return_to_hub');
+        socket.emit('choose_destination'); // Calls 'on_choose_destination'
         $("#declineModal").modal("show");
-        // Time out Modal that pops up, it'll hide.
+        // Time out Modal that pops up, it'll hide, robot is already moving away.
         hiding = window.setTimeout(function () {
             $("#declineModal").modal("hide");
             $(location).attr('href',"/");
