--- a/templates/base.html
+++ b/templates/base.html
@@ -49,5 +49,7 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/my_scripts.js') }}"></script>
+    {% block scripts %}
+    {% endblock %}
   </body>
 </html>
