--- a/templates/delivery.html
+++ b/templates/delivery.html
@@ -17,7 +17,7 @@
 <hr class="featurette-divider">
 <div class="row">
     <span id="orderId" hidden>{{ order['timestamp'] }}</span>
-    <div class="btn btn-default submit col-md-12 col-sm-12 complete">Order Again</div>
+    <div id="reorder" class="btn btn-default submit col-md-12 col-sm-12">Order Again</div>
 </div>
 <hr class="featurette-divider">
 <div class="row">
@@ -42,4 +42,18 @@
   </div>
 </div>
 
+{% endblock %}
+
+{% block scripts %}
+<script>
+$(document).ready(function(){
+    console.log("Navigating to {{ order['location'] }}")
+    payload = { destination: "{{ order['location'] }}" }
+    $.ajax({type: 'POST',
+             url: "/go_to",
+             data: payload,
+         success: function(result){console.log("Navigated to {{ order['location'] }}");}
+     });
+ });
+</script>
 {% endblock %}
