--- a/templates/navigating.html
+++ b/templates/navigating.html
@@ -14,6 +14,7 @@
 
 {% block scripts %}
 <script>
+// On page load, start navigating to given destination
 $(document).ready(function(){
     console.log("Navigating to {{ destination }}")
     payload = { destination: "{{ destination }}" }
@@ -22,6 +23,7 @@ $(document).ready(function(){
              data: payload,
              success: function(result){
                  console.log("Navigated to {{ destination }}");
+                 // Navigation is successful, show the next page
                  $(location).attr('href',"{{ next_page }}");
              }
      });
