--- a/templates/base.html
+++ b/templates/base.html
@@ -23,23 +23,18 @@
      {% if session['logged_in'] %}
     <div class="btn-group btn-group-justified btn-group-lg" role="group" aria-label="nav">
       <div class="btn-group btn-group-lg" role="group">
-        <a href="/" type="button" class="btn btn-default">Menu</a>
+        <div class="btn btn-default home">Menu</div>
       </div>
       <div class="btn-group btn-group-lg" role="group">
-        <a href="/all_orders" type="button" class="btn btn-default">Orders</a>
+        <div id="all_orders" class="btn btn-default">Orders</div>
       </div>
       <div class="btn-group btn-group-lg" role="group">
-        <a href="/navigation" type="button" class="btn btn-default">Navigation</a>
+        <div id="navigation" class="btn btn-default">Navigation</div>
       </div>
     </div>
     {% endif %}
-    <div class="container">
-      <div class="page-header">
-          {% block header %}
-          {% endblock %}
-      </div>
-      {% block content %}
-      {% endblock %}
+    <div id="main_content" class="container">
+    {% block main_content %}{% endblock %}
     </div>
     <!-- Help Modal -->
     <div class="modal fade" id="helpModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
@@ -62,8 +57,8 @@
     <script type="text/javascript" src="{{ url_for('static', filename='js/socket.io.min.js') }}"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+    {% block scripts %}
     <script src="{{ url_for('static', filename='js/my_scripts.js') }}"></script>
-     {% block scripts %}
-     {% endblock %}
+    {% endblock %}
   </body>
 </html>
