--- a/templates/order.html
+++ b/templates/order.html
@@ -1,11 +1,6 @@
-{% extends "base.html" %}
-
-{% block header %}
 <h1>Order</h1>
 <p class="lead">Delivering order to kitchen.</p>
-{% endblock %}
 
-{% block content %}
 <div class="row">
 <div class="btn btn-default submit col-md-12 col-sm-12" data-toggle="modal" data-target="#orderModal">View order</div>
 </div>
@@ -26,14 +21,10 @@
           </div>
           {% endfor %}
           {% if session['logged_in'] %}
-          <p>Order placed at <strong>{{ order['timestamp'] }}</strong></p>
-
-              <a href="/deliver/{{ order['timestamp'] }}" class="btn btn-default btn-success submit col-md-6 col-sm-6">Deliver</a>
-              <form action="/cancel_order" method="POST">
-              <input name="orderId" type="text" value="{{ order['timestamp'] }}" hidden>
-              <button type="submit" class="btn btn-default btn-danger submit col-md-6 col-sm-6">Cancel Order</a>
-              </form>
-
+          <p>Order placed at <strong>{{ order['timestamp'].strftime('%H:%M:%S') }}</strong></p>
+          <div id="deliver" class="btn btn-default btn-success submit col-sm-6">Deliver</div>
+          <div id="cancel" class="btn btn-default btn-danger submit col-sm-6">Cancel Order</div>
+          <input id="orderId" name="orderId" type="text" value="{{ order['timestamp'] }}" hidden>
           {% endif %}
       </div>
       <hr class="featurette-divider">
@@ -44,21 +35,8 @@
   </div>
 </div>
 
-{% endblock %}
-
-{% block scripts %}
-{{ super() }}
+{% if destination %}
 <script>
-$(document).ready(function(){
-    // Open WebSocket
-    namespace = '/io';
-    socket = io.connect(location.protocol + '//' + document.domain + ':' + location.port + namespace);
-    // Return to hub
-    socket.emit('return_to_hub');
-
-    // Monitored Navigation Helper: Call display function. When button clicked, inform serverside
-    socket.on('helper', function(msg){display_helper(msg)});
-    $('#help_button').click(function(event){socket.emit('helped')})
-});
+navsocket.emit('go_to', '{{ destination }}');
 </script>
-{% endblock %}
+{% endif %}
