--- a/templates/twitter.html
+++ b/templates/twitter.html
@@ -1,13 +1,8 @@
-{% extends "base.html" %}
 
-{% block header %}
 <h1>LUCIE's selfie service</h1>
 <p class="lead">Follow LUCIE on Twitter @LucieStrands. Smile and
     hold up the camera for a stunning snapshot!</p>
-{% endblock %}
 
-{% block content %}
-<a href="/" class="btn btn-default submit col-md-12 col-sm-12">Back to the Menu</a>
+<div class="home btn btn-default submit col-md-12 col-sm-12">Back to the Menu</div>
 <a class="twitter-timeline" href="https://twitter.com/LucieStrands">Tweets by @LucieStrands</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-<a href="/" class="btn btn-default submit col-md-12 col-sm-12">Back to the Menu</a>
-{% endblock %}
+<div class="home btn btn-default submit col-md-12 col-sm-12">Back to the Menu</div>
