--- a/templates/delivery.html
+++ b/templates/delivery.html
@@ -42,3 +42,16 @@
 navsocket.emit('go_to', '{{ destination }}');
 </script>
 {% endif %}
+
+{% if timeout %}
+<script>
+    var seconds = {{ timeout }};
+    var timeout;
+    timeout = window.setTimeout(function(){
+        navsocket.emit('go_to_hub');
+    }, 1000 * seconds);
+    $(document).click(function(){
+        clearTimeout(timeout);
+    });
+</script>
+{% endif %}
