--- a/templates/delivery.html
+++ b/templates/delivery.html
@@ -47,11 +47,14 @@ navsocket.emit('go_to', '{{ destination }}');
 <script>
     var seconds = {{ timeout }};
     var timeout;
-    timeout = window.setTimeout(function(){
-        navsocket.emit('go_to_hub');
-    }, 1000 * seconds);
+    function set_timeout() {
+        timeout = window.setTimeout(function () {
+             navsocket.emit('go_to_hub');
+        }, 1000 * seconds);
+    }
     $(document).click(function(){
         clearTimeout(timeout);
     });
+    navsocket.on('success', function(){set_timeout();});
 </script>
 {% endif %}
