--- a/templates/delivery.html
+++ b/templates/delivery.html
@@ -54,7 +54,12 @@ navsocket.emit('go_to', '{{ destination }}');
     }
     $(document).click(function(){
         clearTimeout(timeout);
+        seconds = seconds * 2;
+        set_timeout();
     });
-    navsocket.on('success', function(){set_timeout();});
+    navsocket.on('success', function(){
+        clearTimeout(timeout);
+        set_timeout();
+    });
 </script>
 {% endif %}
