--- a/templates/home.html
+++ b/templates/home.html
@@ -61,7 +61,6 @@ navsocket.emit('go_to', '{{ destination }}');
 </script>
 {% endif %}
 
-
 {% if timeout %}
 <script>
     var seconds = {{ timeout }};
@@ -73,7 +72,12 @@ navsocket.emit('go_to', '{{ destination }}');
     }
     $(document).click(function(){
         clearTimeout(timeout);
+        seconds = seconds * 2;
+        set_timeout();
     });
-    navsocket.on('success', function(){set_timeout();});
+    navsocket.on('success', function(){
+        clearTimeout(timeout);
+        set_timeout();
+    });
 </script>
 {% endif %}
